<resources>
    <string name="app_name">StudyBitsWallet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_university">UniversityActivity</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="title_activity_credential">Credentials</string>
    <string name="title_activity_exchange_position">ExchangePositionActivity</string>
    <string name="title_activity_documents">Documents</string>
    <string name="download_file">Download this file from StudyBits</string>
    <string name="savefile">Save file</string>
    <string name="getvalidation">Get validation</string>
    <string name="source">Source: </string>
    <string name="size">Size: </string>
    <string name="filetype">Filetype: </string>
    <string name="file">File</string>
    <string name="sharefile">share file</string>
    <string name="universities">universities</string>
    <string name="credentials">credentials</string>
    <string name="exchange_positions">exchange positions</string>
    <string name="documents">documents</string>
</resources>
