<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/file_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_alignParentStart="true"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_toEndOf="@+id/file_type"
        android:layout_toStartOf="@id/file_size"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/file_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_toStartOf="@+id/file_download"
        android:textColor="@android:color/tertiary_text_light"
        android:textAppearance="?attr/textAppearanceListItem" />

    <ImageButton android:id="@+id/file_download"
        style="?android:borderlessButtonStyle"
        android:layout_width="@dimen/standard_touch_target_size"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_menu"
        android:contentDescription="@string/download_file" />
</RelativeLayout>
