...
            android:src="@drawable/exchange_position_icon"
            android:background="@color/colorButtonBackground"
            android:contentDescription="@string/exchange_positions"
            />

        <ImageButton
            android:id="@+id/button_document"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/document_icon"
            android:background="@color/colorButtonBackground"
            android:contentDescription="@string/documents"
            />
...
